# agentweave-rq21-deploy

./: .deepseek_keys.template  .gitignore  AGENTS.md  CLAUDE.md  README.md  SERVER_RUNBOOK.md
runner/: .gitignore  README.md  pyproject.toml
runner/notes/: todo.md
runner/src/agentweave_runner/: __init__.py  checkpoint.py  cli.py  cli_harnesses.py  concurrency.py  harness.py  library.py  methods.py  runner.py
runner/tests/: test_harness_dispatch.py  test_methods.py  test_runner_smoke.py
swe-skills-bench/: README.md  pyproject.toml
swe-skills-bench/src/swe_skills_bridge/: __init__.py  cli.py  eval_adapter.py  installer.py  skill_loader.py  task_adapter.py
swe-skills-bench/src/swe_skills_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
swe-skills-bench/tasks/: task_001.json  task_002.json  task_003.json  task_004.json  task_005.json  task_006.json  task_007.json  task_008.json  task_009.json  task_010.json  task_012.json  task_013.json  task_014.json  task_016.json  task_017.json  task_018.json  task_023.json  task_024.json  task_025.json  task_029.json  task_032.json  task_033.json  task_035.json  task_036.json  task_039.json  task_040.json  task_042.json  task_043.json  task_044.json  task_045.json
swe-skills-bench/tests/: test_smoke_e2e.py
swe-skills-bench/upstream/: .env.example  .gitignore  README.md  eval.py  main.py  requirements.txt  run_all_skills.py  run_all_skills_eval.py
swe-skills-bench/upstream/config/: benchmark_config.yaml
swe-skills-bench/upstream/scripts/: analyze_tokens.py  clean_container.py  compare_pass_rate.py  extract_failed_tests.py
swe-skills-bench/upstream/skills/add-uint-support/: SKILL.md
swe-skills-bench/upstream/skills/creating-financial-models/: dcf_model.py  sensitivity_analysis.py
swe-skills-bench/upstream/src/: __init__.py
swe-skills-bench/upstream/src/evaluator/: __init__.py  base_evaluator.py  build_checker.py  quality_analyzer.py  (+1 more)
(+1167 files in other folders)
